# genai

./: LICENSE  README.md  pyproject.toml
genclai/: app.py
