[tool.poetry]
name = "genclai"
version = "0.1.0"
description = "CLI Tool to query chat gpt"
authors = ["Eric Hernandez"]
license = "MIT"
readme = "README.md"
packages = [{include = "genclai"}]

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.54.3"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
genclai = 'genclai.app:query_openai'
